--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <section class="main-content">
       <h3>
-<a id="Welcome-to-the-best-place-on-the-Internet-to-learn-French" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="Welcome-to-the-best-place-on-the-Internet-to-learn-French" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the best place on the Internet to learn French</h3>
 
 <p> This page is full of great, useful information and links on how to learn French and general information about Frence itself! Whether you're a beginner, have some exprience with the language or just want to brush up on your skills, you're in the right place. </p>
 
 <h3>
-<a id="Main aspects of languages..." class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="Main aspects of languages..." class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main aspects of languages...</h3>
 
-<p>To nail a new language, you have to get used to training your listening, speaking, reading and writing skills...<i>in that order!</i></p>
+<p>To nail a new language, you have to get used to training your listening, speaking, reading and writing skills...<i>in that order!</i> </p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
