--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline">Computers and languages</h2>
+      <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
     </section>
 
     <section class="main-content">
