--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="media">   
 <div class="media-right">  <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">    </div><!--end media-right--> 
-
+      </div>
       
      
 <h3>
