--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
 <p> This page is full of great, useful information and links on how to learn French and general information about Frence itself! Whether you're a beginner, have some exprience with the language or just want to brush up on your skills, you're in the right place. </p>
 
-<div class="media">   
-<div class="media-right">  <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">    </div><!--end media-right--> 
-      </div>
+ <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">   
       
      
 <h3>
