--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Learning French</h1>
       <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
+      <a href="index.html" class="btn">Home</a>
+      <a href="francais.html" class="btn">La langue</a>
+      <a href="France.html" class="btn">France</a>
+    
     </section>
 
     <section class="main-content">
