--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Learning French</h1>
       <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="francais.html" class="btn">La langue</a>
+      <a href="language.html" class="btn">Language</a>
       <a href="France.html" class="btn">France</a>
     
     </section>
