--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
-      <a href="France.html" class="btn">France</a>
+      <a href="france.html" class="btn">France</a>
     
     </section>
 
