--- a/language.html
+++ b/language.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
+      <h1 class="project-name">LANGUAGE</h1>
+      <h2 class="project-tagline"><strong>FRENCH</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
