--- a/exercises.html
+++ b/exercises.html
@@ -12,8 +12,12 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline"><strong>Exercises page</strong></h2>
-    
+      <h2 class="project-tagline"><strong>Computers and languages</strong></h2>
+      <a href="index.html" class="btn">Home</a>
+      <a href="language.html" class="btn">Language</a>
+      <a href="france.html" class="btn">France</a>
+      <a href="exercises.html" class="btn">Exercises</a>
+      
     </section>
 
     <section class="main-content">
