--- a/language.html
+++ b/language.html
@@ -16,6 +16,7 @@
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
+      <a href="exercises.html" class="btn">Exercises</a>
     
     </section>
 
