--- a/exercises.html
+++ b/exercises.html
@@ -35,9 +35,9 @@
 <p>To nail a new language, you have to get used to training your listening, speaking, reading and writing skills...<i>in that order!</i> </p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Do you know where each city, listed below, is located in France?</h3>
 
-<p>Have you ever been to France? It's one of the most beautiful countires e v e r. Loads of people base their views of France just on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in. the. world.</p>
+<p><iframe src="https://h5p.org/h5p/embed/31726" width="1090" height="247" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
