--- a/exercises.html
+++ b/exercises.html
@@ -30,6 +30,8 @@
 
 <p><iframe src="https://h5p.org/h5p/embed/31726" width="1090" height="247" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script></p>
 
+  <iframe src="https://h5p.org/h5p/embed/31747" width="1090" height="432" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>   
+      
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
