--- a/exercises.html
+++ b/exercises.html
@@ -20,6 +20,8 @@
       
     </section>
 
+<iframe width="100%" height="160" src="https://clyp.it/ntyvunbe/widget" frameborder="0"></iframe>
+    
     <section class="main-content">
       <h3>
 <a id="Welcome-to-the-best-place-on-the-Internet-to-learn-French" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the best place on the Internet to learn French</h3>
