--- a/exercises.html
+++ b/exercises.html
@@ -24,6 +24,10 @@
       <h3>
 <a id="Welcome-to-the-best-place-on-the-Internet-to-learn-French" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the best place on the Internet to learn French</h3>
 
+<audio controls> 
+      <source src="https://clyp.it/ntyvunbe.mp3" type="audio/mpeg">
+  Your browser does not support this audio element.
+      </audio>
     
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Do you know where each city, listed below, is located in France?</h3>
