--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
 <audio controls> 
-      <source src="https://clyp.it/12hsa3gx/widget" type="audio/mpeg">
+      <source src="https://clyp.it/12hsa3gx.mp3" type="audio/mpeg">
   Your browser does not support this audio element.
       </audio>
     
