--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
       <a href="exercises.html" class="btn">Exercises</a>
+      <a href="multimedia.html" class="btn">Multimedia</a>
     
     </section>   
     
