--- a/exercises.html
+++ b/exercises.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline"><strong>About French and France</strong></h2>
+      <h2 class="project-tagline"><strong>Exercises</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
