--- a/france.html
+++ b/france.html
@@ -12,11 +12,12 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline"><strong>How to learn French</strong></h2>
+      <h2 class="project-tagline"><strong>About France</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
       <a href="exercises.html" class="btn">Exercises</a>
+      <a href="multimedia.html" class="btn">Multimedia</a>
     
     </section>
 
