--- a/france.html
+++ b/france.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Learning French</h1>
-      <h2 class="project-tagline"><strong>About French and France</strong></h2>
+<h1 class="project-name">Learning French</h1>
+      <h2 class="project-tagline"><strong>France</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Language</a>
       <a href="france.html" class="btn">France</a>
