--- a/language.html
+++ b/language.html
@@ -53,9 +53,8 @@
 
 <!--Nav buttons--> 
 
-<a href="https://mibarge.github.io/learn-english/exercises.html" class="btn2 btnBack alignleft"><span> Back</span></a>
 
-<a href="https://mibarge.github.io/learn-english/song.html" class="btn2 btnForward alignright"><span>Listening exercise </span></a>     
+<a href="https://mibarge.github.io/learn-english/song.html" class="btn2 btnForward alignright"><span>Next Page </span></a>     
 
 	    <div style="clear: both;"></div>
 	    
