--- a/france.html
+++ b/france.html
@@ -40,8 +40,16 @@
 
 <p>Have you ever been to France? It's one of the most beautiful countires e v e r. Loads of people base their views of France just on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in. the. world.</p>
 
+      <!--Nav buttons--> 
+
+<a href="https://bhavini1.github.io/language.html" class="btn2 btnBack alignleft"><span> Back</span></a>
+
+	    <div style="clear: both;"></div>
+	    
+	    <p>&nbsp;</p>
 
 
+      
     </section>
 
   
