--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class="project-name">Learning French</h1>
       <h2 class="project-tagline"><strong>About French and France</strong></h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="language.html" class="btn">Months of the year and seasons</a>
-      <a href="france.html" class="btn">Free time activities</a>
-      <a href="exercises.html" class="btn">Months and seasons exercises</a>
+      <a href="language.html" class="btn">Months of the year and seasons vocabulary</a>
+      <a href="france.html" class="btn">Months and seasons exercises</a>
+      <a href="exercises.html" class="btn">Free time activities vocabulary</a>
       <a href="multimedia.html" class="btn">Free time activities exercise</a>
     
     </section>   
