--- a/multimedia.html
+++ b/multimedia.html
@@ -18,6 +18,7 @@
       <a href="france.html" class="btn">Months and seasons exercises</a>
       <a href="exercises.html" class="btn">Free time activities vocabulary</a>
       <a href="multimedia.html" class="btn">Free time activities exercise</a>
+      <a href="extra.html" class="btn">Extra links</a>
     
     </section>    
     
