--- a/multimedia.html
+++ b/multimedia.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"><strong>Exercise</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="language.html" class="btn">Months of the year and seasons vocabulary</a>
-      <a href="france.html" class="btn">Months and seasons exercise</a>
+      <a href="france.html" class="btn">Months and seasons exercises</a>
       <a href="exercises.html" class="btn">Free time activities vocabulary</a>
       <a href="multimedia.html" class="btn">Free time activities exercise</a>
       <a href="extra.html" class="btn">Extra links</a>
