--- a/language.html
+++ b/language.html
@@ -23,10 +23,9 @@
       </section>    
 	  
     <section class="main-content">
-      <h3>
-<a id="Welcome-to-the-best-place-on-the-Internet-to-learn-French" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the best place on the Internet to learn French</h3>
+      
 
-<p> This page is full of great, useful information and links on how to learn French and general information about Frence itself! Whether you're a beginner, have some exprience with the language or just want to brush up on your skills, you're in the right place. </p>
+	   <iframe src="https://h5p.org/h5p/embed/43870" width="1090" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">   
       
