--- a/language.html
+++ b/language.html
@@ -27,28 +27,12 @@
 
 	   <iframe src="https://h5p.org/h5p/embed/43870" width="1090" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">   
-      
-     
-<h3>
-<a id="Main aspects of languages..." class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main aspects of languages...</h3>
-
-<p>To nail a new language, you have to get used to training your listening, speaking, reading and writing skills...<i>in that order!</i> </p>
+ <iframe src="https://h5p.org/h5p/embed/43873" width="1090" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
 
 <p>Have you ever been to France? It's one of the most beautiful countires e v e r. Loads of people base their views of France just on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in. the. world.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
 
 <!--Nav buttons--> 
