--- a/france.html
+++ b/france.html
@@ -27,15 +27,12 @@
 <iframe src="https://h5p.org/h5p/embed/43887" width="1090" height="354" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
       
      
-<h3>
-<a id="Main aspects of languages..." class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main aspects of languages...</h3>
-
-<p>To nail a new language, you have to get used to training your listening, speaking, reading and writing skills...<i>in that order!</i> </p>
+<iframe src="https://h5p.org/h5p/embed/43893" width="1090" height="890" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
 
-<p>Have you ever been to France? It's one of the most beautiful countires e v e r. Loads of people base their views of France just on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in. the. world.</p>
+<p>How were the exercises? If they were hard, don't worry, practice makes perfect! If they were too easy, then check out the rest of the activities on the website and then find something that suits you better on the extra links page!</p>
 
       <!--Nav buttons--> 
 
