--- a/france.html
+++ b/france.html
@@ -32,9 +32,13 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
 
+	    <p>That was a starter! Now try it with all four seasons.</p>
+	    
+	    <iframe src="https://h5p.org/h5p/embed/43899" width="1090" height="890" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
+
 <p>How were the exercises? If they were hard, don't worry, practice makes perfect! If they were too easy, then check out the rest of the activities on the website and then find something that suits you better on the extra links page!</p>
 
-      <!--Nav buttons--> 
+	    <!--Nav buttons--> 
 
 <a href="https://bhavini1.github.io/language.html" class="btn2 btnBack alignleft"><span> Back</span></a>
 
