--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
 
 <p>Have you ever been to France? It's one of the most beautiful countires e v e r. Loads of people base their views of France just on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in. the. world.</p>
+      
+ <iframe src="https://www.google.com/maps/d/embed?mid=1u2mh6zghirkdGPL4jxag9TftWa4" width="640" height="480"></iframe>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
