--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
  <iframe src="https://www.google.com/maps/d/embed?mid=1u2mh6zghirkdGPL4jxag9TftWa4" width="640" height="480"></iframe>
 
- <p><iframe src="https://h5p.org/h5p/embed/31726" width="1090" height="247" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script></p> 
+<iframe src="https://h5p.org/h5p/embed/31726" width="830" height="252" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
 
 <h3>
