Update and rename language.html to yearvocab.html

--- a/yearvocab.html
+++ b/yearvocab.html
@@ -14,10 +14,10 @@
       <h1 class="project-name">Months of the year and seasons</h1>
       <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="language.html" class="btn">Months of the year and seasons vocabulary</a>
-      <a href="france.html" class="btn">Months and seasons exercises</a>
-      <a href="exercises.html" class="btn">Free time activities vocabulary</a>
-      <a href="multimedia.html" class="btn">Free time activities exercise</a>
+      <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
+      <a href="yearexercises.html" class="btn">Months and seasons exercises</a>
+      <a href="freetimevocab.html" class="btn">Free time activities vocabulary</a>
+      <a href="freetimeexercises.html" class="btn">Free time activities exercise</a>
       <a href="extra.html" class="btn">Extra links</a>
    
       </section>    
