Update and rename france.html to yearexercises.html

--- a/yearexercises.html
+++ b/yearexercises.html
@@ -11,16 +11,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Months and seasons</h1>
-      <h2 class="project-tagline"><strong>Exercises</strong></h2>
+      <h1 class="project-name">Months of the year and seasons</h1>
+      <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="language.html" class="btn">Months of the year and seasons vocabulary</a>
-      <a href="france.html" class="btn">Months and seasons exercises</a>
-      <a href="exercises.html" class="btn">Free time activities vocabulary</a>
-      <a href="multimedia.html" class="btn">Free time activities exercise</a>
+      <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
+      <a href="yearexercises.html" class="btn">Months and seasons exercises</a>
+      <a href="freetimevocab.html" class="btn">Free time activities vocabulary</a>
+      <a href="freetimeexercises.html" class="btn">Free time activities exercise</a>
       <a href="extra.html" class="btn">Extra links</a>
-    
-    </section>    
+   
+      </section>    
 
     <section class="main-content">
       
