--- a/yearvocab.html
+++ b/yearvocab.html
@@ -31,6 +31,12 @@
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>
+	    
+	    
+	   <audio controls> 
+      <source src="<iframe width="100%"height="160"src="https://clyp.it/mvoztcmw/widget"frameborder="0"></iframe>" type="audio/mpeg">
+  Your browser does not support this audio element.
+      </audio>  
 
 <p>Once you have revised the vocabulary, click the "Next" button to advance to the exercises page!</p>
 
