--- a/yearvocab.html
+++ b/yearvocab.html
@@ -34,7 +34,7 @@
 	    
 	    
 	   <audio controls> 
-      <source src="<iframe width="100%"height="160"src="https://clyp.it/mvoztcmw/widget"frameborder="0"></iframe>" type="audio/mpeg">
+      <source src="https://clyp.it/mvoztcmw.mp3" type="audio/mpeg">
   Your browser does not support this audio element.
       </audio>  
 
