--- a/yearvocab.html
+++ b/yearvocab.html
@@ -44,7 +44,7 @@
 <!--Nav buttons--> 
 
 
-<a href="https://bhavini1.github.io/france.html" class="btn2 btnForward alignright"><span>Next Page </span></a>     
+<a href="https://bhavini1.github.io/yearexercises.html" class="btn2 btnForward alignright"><span>Next Page </span></a>     
 
 	    <div style="clear: both;"></div>
 	    
