--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Months of the year and seasons</h1>
-      <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
+      <h1 class="project-name">Welcome to FunWithFrench</h1>
+      <h2 class="project-tagline"><strong>Homepage</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
       <a href="yearexercises.html" class="btn">Months and seasons exercises</a>
@@ -53,7 +53,7 @@
 
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>FunWithFrench</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
