--- a/yearexercises.html
+++ b/yearexercises.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Months of the year and seasons</h1>
-      <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
+      <h2 class="project-tagline"><strong>Exercises</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
       <a href="yearexercises.html" class="btn">Months and seasons exercises</a>
