--- a/freetimevocab.html
+++ b/freetimevocab.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Months of the year and seasons</h1>
+      <h1 class="project-name">Things to do in your free time</h1>
       <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
