--- a/freetimeexercises.html
+++ b/freetimeexercises.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Months of the year and seasons</h1>
-      <h2 class="project-tagline"><strong>Vocabulary</strong></h2>
+      <h1 class="project-name">Things to do in your free time</h1>
+      <h2 class="project-tagline"><strong>Exercises</strong></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="yearvocab.html" class="btn">Months of the year and seasons vocabulary</a>
       <a href="yearexercises.html" class="btn">Months and seasons exercises</a>
