--- a/yearexercises.html
+++ b/yearexercises.html
@@ -48,6 +48,10 @@
 	    
 	    <p>&nbsp;</p>
 
+<footer class="site-footer">
+
+        <span class="site-footer-credits">FunWithFrench</span>
+      </footer>
 
       
     </section>
